@@ -1163,11 +1163,31 @@ class PHPWS_Boost {
         foreach ($all_mods as $key=> $module) {
             if (is_file(PHPWS_SOURCE_DIR . 'mod/' . $module . '/boost/boost.php')) {
                 $dir_mods[] = $module;
+            } elseif (is_file(PHPWS_SOURCE_DIR . 'mod/' . $module . '/conf/boost.php')) {
+                $GLOBALS['Boost_Old_Mods'][] = $module;
             }
+
         }
         return $dir_mods;
     }
-    
+
+    function oldModList()
+    {
+        if (!isset($GLOBALS['Boost_Old_Mods'])) {
+            return null;
+        }
+
+        $old_mods = & $GLOBALS['Boost_Old_Mods'];
+
+        $content[] = dgettext('boost', 'The following modules will not function in phpWebSite 1.x.');
+        foreach ($old_mods as $mod) {
+            include sprintf('%smod/%s/conf/boost.php', PHPWS_SOURCE_DIR, $mod);
+            $content[] = $mod_pname;
+        }
+
+        return implode('<br />', $content);
+    }
+
 }
 
 ?>
