@@ -1,3 +1,8 @@
+1 June 2007
++ RFE #1720749 - Boost now detects and warns users of old module
+  installs.
++ Updated files: templates/module_list.tpl
+
 Version 2.1.1
 ------------------------------------------------------
 15 May 2007
